[package]
name = "rocket"
version = "0.1.0"
authors = ["maxime.gauthier"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whirlpool = "0.9.0"
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }


[dependencies.rocket_contrib]
version = "0.4.5"
features = ["handlebars_templates", "tera_templates"]
